test/classes/initializers/inheritance/override.good
override.chpl:10: error: the 'override' keyword cannot be applied to 'init()' routines
